--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1076,10 +1076,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markdown para explicar cada função nos seguintes niveis\n",
-    "- Descrição do algoritmo\n",
-    "- Projeto de alto nível\n",
-    "- Projeto de baixo nível"
+    "Motifs probabilísticos são padrões recorrentes ou sequências específicas encontrados em moléculas biológicas, como DNA, RNA e proteínas. Esses padrões desempenham um papel crucial na compreensão dos mecanismos regulatórios dos genes, na identificação de domínios funcionais em proteínas e na análise da evolução molecular. Já os motifs probabilísticos consideram a variação natural nas sequências biológicas, capturando a flexibilidade e a aleatoriedade inerentes aos sistemas biológicos.\n",
+    "\n",
+    "Esses motifs são amplamente utilizados para representar regiões de ligação de proteínas, elementos regulatórios, promotores genéticos e outras regiões funcionais importantes nas sequências de DNA e RNA. A principal característica que diferencia os motifs probabilísticos é a incorporação de probabilidades associadas à ocorrência de nucleotídeos ou aminoácidos em posições específicas, refletindo a variabilidade observada nos dados biológicos.\n",
+    "\n",
+    "Neste contexto, desenvolvemos um conjunto de funções computacionais para análise de motifs probabilísticos. A função `alfabeto` foi criada para retornar o conjunto de caracteres correspondente ao tipo de sequência (DNA, RNA ou proteína). Em seguida, a função `pwm` (Position Weight Matrix) gera uma matriz de pesos a partir de sequências alinhadas, indicando a probabilidade de cada símbolo biológico ocorrer em posições específicas. Posteriormente, a função `prob_seq` calcula a probabilidade de uma determinada sequência ter sido gerada pela PWM. Complementando essa análise, a função `seq_mais_provavel` identifica a subsequência com maior probabilidade de ocorrência em uma sequência maior, utilizando a PWM como referência. Por fim, a função `pssm` (Position-Specific Scoring Matrix) foi implementada para calcular uma matriz de pontuação que leva em consideração a variabilidade das sequências, utilizando logaritmos para ajustar as probabilidades e realçar posições mais informativas.\n",
+    "\n",
+    "Essas ferramentas oferecem uma abordagem robusta e avançada para a análise de sequências biológicas, permitindo a identificação de padrões funcionais e contribuindo para avanços em bioinformática, biologia molecular e genética."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Função: print_profile**\n",
+    "\n",
+    "A função print_profile é usada para exibir tabelas formatadas a partir de listas de dicionários. Isso é útil para visualizar as matrizes geradas por PWM ou PSSM."
    ]
   },
   {
@@ -1087,23 +1099,245 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Árvore Filogenética"
+    "def print_profile(perfil):\n",
+    "    \"\"\"\n",
+    "    Formata e exibe uma tabela a partir de uma lista de dicionários.\n",
+    "    \"\"\"\n",
+    "    bases = sorted(perfil[0].keys())\n",
+    "    tab = [[f\"{p[b]:-5.2f}\" for b in bases] for p in perfil]\n",
+    "    for p in zip(*([bases] + tab)):\n",
+    "        print(*p)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markdown para explicar cada função nos seguintes niveis\n",
-    "- Descrição do algoritmo\n",
-    "- Projeto de alto nível\n",
-    "- Projeto de baixo nível"
+    "##### **Função: pwm**\n",
+    "A função pwm cria uma matriz de pesos baseada na frequência das bases nucleotídicas num alinhamento de sequências."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pwm(alinhamento: list[str], pseudo: float = 0) -> list[dict]:\n",
+    "    \"\"\"\n",
+    "    Calcula a PWM para um alinhamento de sequências de DNA.\n",
+    "    \"\"\"\n",
+    "    bases = 'ATCG'\n",
+    "    lista = []\n",
+    "\n",
+    "    # Validação e pré-processamento\n",
+    "    for seq in alinhamento:\n",
+    "        seq = seq.upper().replace(' ', '')\n",
+    "        assert len(seq) == len(alinhamento[0]), \"Sequências com tamanhos diferentes!\"\n",
+    "    \n",
+    "    # Cálculo da PWM\n",
+    "    for pos in zip(*alinhamento):\n",
+    "        dicionario = {b: round((pos.count(b) + pseudo) / (len(alinhamento) + len(bases) * pseudo), 2) for b in bases}\n",
+    "        lista.append(dicionario)\n",
+    "    return lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo de uso:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = pwm(['ATTG', 'ATCG', 'ATTC', 'ACTC'], 0.5)\n",
+    "print_profile(P)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Função: prob_seq**\n",
+    "Esta função calcula a probabilidade de uma sequência específica com base na PWM gerada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob_seq(seq: str, PWM: list[dict]) -> float:\n",
+    "    \"\"\"\n",
+    "    Calcula a probabilidade de uma sequência ser gerada pela PWM.\n",
+    "    \"\"\"\n",
+    "    produto = 1\n",
+    "    seq = seq.upper()\n",
+    "    for pos, elem in enumerate(seq):\n",
+    "        produto *= PWM[pos][elem]\n",
+    "    return produto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Função: seq_mais_provavel**\n",
+    "Utiliza expressões regulares para determinar a subsequência mais provável de uma sequência maior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def seq_mais_provavel(seq: str, PWM: list[dict]) -> str:\n",
+    "    \"\"\"\n",
+    "    Encontra a subsequência mais provável baseada na PWM.\n",
+    "    \"\"\"\n",
+    "    dicionario = {}\n",
+    "    for subset in re.findall('(?=(....))', seq):\n",
+    "        dicionario[subset] = prob_seq(subset, PWM)\n",
+    "    return max(dicionario, key=dicionario.get)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo de uso:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mais_provavel = seq_mais_provavel(\"TACCGTGCA\", P)\n",
+    "print(mais_provavel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Função: pssm**\n",
+    "A PSSM adiciona uma camada logarítmica para calcular a probabilidade de ocorrência de cada base."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def pssm(alinhamento: list[str], pseudo: float = 1) -> list[dict]:\n",
+    "    \"\"\"\n",
+    "    Calcula a matriz de escore específico de posição (PSSM).\n",
+    "    \"\"\"\n",
+    "    bases = 'ATCG'\n",
+    "    lista = []\n",
+    "\n",
+    "    # Validação e pré-processamento\n",
+    "    for seq in alinhamento:\n",
+    "        seq = seq.upper().replace(' ', '')\n",
+    "        assert len(seq) == len(alinhamento[0]), \"Sequências com tamanhos diferentes!\"\n",
+    "    \n",
+    "    # Cálculo da PSSM\n",
+    "    for pos in zip(*alinhamento):\n",
+    "        dicionario = {b: math.log2(((pos.count(b) + pseudo) / (len(alinhamento) + len(bases) * pseudo)) / 0.25) for b in bases}\n",
+    "        lista.append(dicionario)\n",
+    "    return lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo de uso:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PSSM = pssm(['ATTG', 'ATCG', 'ATTC', 'ACTC'], 0.5)\n",
+    "print_profile(PSSM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Testes das Funções para Motifs determinísticos e estocásticos**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestMotifsProbabilistic(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.alinhamento = ['ATTG', 'ATCG', 'ATTC', 'ACTC']\n",
+    "        self.PWM = pwm(self.alinhamento, 0.5)\n",
+    "        self.PSSM = pssm(self.alinhamento, 0.5)\n",
+    "\n",
+    "    def test_pwm_output(self):\n",
+    "        expected_pwm = [\n",
+    "            {'A': 0.75, 'C': 0.08, 'G': 0.08, 'T': 0.08},\n",
+    "            {'A': 0.08, 'C': 0.25, 'G': 0.08, 'T': 0.58},\n",
+    "            {'A': 0.08, 'C': 0.25, 'G': 0.08, 'T': 0.58},\n",
+    "            {'A': 0.08, 'C': 0.42, 'G': 0.42, 'T': 0.08}\n",
+    "        ]\n",
+    "        self.assertEqual(self.PWM, expected_pwm)\n",
+    "\n",
+    "    def test_prob_seq(self):\n",
+    "        prob = prob_seq('AT', self.PWM)\n",
+    "        self.assertAlmostEqual(prob, 0.435, places=3)\n",
+    "\n",
+    "    def test_seq_mais_provavel(self):\n",
+    "        result = seq_mais_provavel(\"TACCGTGCA\", self.PWM)\n",
+    "        self.assertEqual(result, 'ACCG')\n",
+    "\n",
+    "    def test_pssm_output(self):\n",
+    "        expected_pssm = [\n",
+    "            {'A': 1.58, 'C': -1.58, 'G': -1.58, 'T': -1.58},\n",
+    "            {'A': -1.58, 'C': 0.00, 'G': -1.58, 'T': 1.22},\n",
+    "            {'A': -1.58, 'C': 0.00, 'G': -1.58, 'T': 1.22},\n",
+    "            {'A': -1.58, 'C': 0.74, 'G': 0.74, 'T': -1.58}\n",
+    "        ]\n",
+    "        for pos1, pos2 in zip(self.PSSM, expected_pssm):\n",
+    "            for base in pos1:\n",
+    "                self.assertAlmostEqual(pos1[base], pos2[base], places=2)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Árvore Filogenética"
    ]
   },
   {
@@ -1312,7 +1546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
