--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -928,22 +928,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markdown para explicar cada função nos seguintes niveis\n",
-    "- Descrição do algoritmo\n",
-    "- Projeto de alto nível\n",
-    "- Projeto de baixo nível"
+    "# Descrição do Algoritmo (BLAST)\n",
+    "\n",
+    "**BLAST (Basic Local Alignment Search Tool)** é um algoritmo amplamente utilizado em bioinformática para encontrar regiões de similaridade local entre sequências biológicas, como DNA, RNA ou proteínas. Ele utiliza uma abordagem heurística para identificar rapidamente os alinhamentos locais mais significativos entre uma sequência de consulta (query) e uma base de dados (database). A heurística do BLAST reduz o tempo de execução ao evitar o alinhamento completo, analisando apenas as subsequências mais promissoras.\n",
+    "\n",
+    "### Etapas principais do BLAST:\n",
+    "1. **Criação de palavras**: A sequência de consulta é dividida em subsequências de tamanho fixo (`w`), chamadas palavras.\n",
+    "2. **Mapeamento**: As palavras são comparadas com as subsequências na base de dados para encontrar correspondências exatas.\n",
+    "3. **Identificação de hits**: Quando uma palavra corresponde a uma subsequência no banco de dados, ela é marcada como um hit inicial.\n",
+    "4. **Extensão de hits**: Os hits iniciais são estendidos em ambas as direções para verificar se formam alinhamentos mais longos e significativos.\n",
+    "5. **Pontuação e classificação**: Os alinhamentos são pontuados com base em um sistema de substituição/match e apresentados ao usuário, ordenados pelo valor de similaridade.\n",
+    "---\n",
+    "\n",
+    "## Projeto de Alto Nível (BLAST)\n",
+    "\n",
+    "\n",
+    "### 1. **Entrada e Saída:**\n",
+    "- **Entrada:**\n",
+    "  - Sequência de consulta (query).\n",
+    "  - Base de dados de sequências.\n",
+    "  - Tamanho da palavra (`w`) e outros parâmetros opcionais (e.g., score threshold).\n",
+    "- **Saída:**\n",
+    "  - Lista de alinhamentos locais mais significativos com suas respectivas pontuações.\n",
+    "\n",
+    "### 2. **Componentes Principais:**\n",
+    "- **Query Mapping**: Dividir a sequência de consulta em subsequências (`w`) e mapear suas ocorrências.\n",
+    "- **Hit Detection**: Identificar subsequências correspondentes na base de dados.\n",
+    "- **Hit Extension**: Expandir hits em ambas as direções para formar alinhamentos locais mais longos.\n",
+    "- **Scoring**: Calcular a pontuação dos alinhamentos usando uma matriz de substituição (e.g., BLOSUM para proteínas ou match/mismatch para DNA).\n",
+    "- **Filtragem e Classificação**: Filtrar alinhamentos com pontuações baixas e ordenar os resultados.\n",
+    "\n",
+    "### 3. **Fluxo de Dados:**\n",
+    "Entrada da query → Criação de palavras → Mapeamento na base de dados → Identificação de hits → Extensão de hits → Pontuação → Ordenação e saída.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Projeto de Baixo Nível (BLAST)\n",
+    "\n",
+    "### 1. **Query Mapping**:\n",
+    "- **Descrição**: Dividir a query em palavras de tamanho `w` e criar um dicionário com as subsequências como chaves e seus índices como valores.\n",
+    "- **Estruturas de Dados**: `defaultdict` para armazenar as palavras e seus índices.\n",
+    "\n",
+    "### 2. **Hit Detection**:\n",
+    "- **Descrição**: Para cada palavra da query, buscar todas as ocorrências correspondentes na base de dados.\n",
+    "- **Algoritmo**:\n",
+    "  - Iterar sobre todas as subsequências da base de dados.\n",
+    "  - Comparar com as palavras geradas pela query.\n",
+    "\n",
+    "### 3. **Hit Extension**:\n",
+    "- **Descrição**: Expandir os hits para verificar o alinhamento máximo em ambas as direções, respeitando os critérios de pontuação mínima.\n",
+    "- **Algoritmo**:\n",
+    "  - Iniciar no índice do hit.\n",
+    "  - Expandir para a esquerda e direita enquanto o número de matches for maior ou igual a metade do tamanho da extensão.\n",
+    "\n",
+    "### 4. **Scoring**:\n",
+    "- **Descrição**: Avaliar cada alinhamento usando:\n",
+    "  - Pontuação por match/mismatch (e.g., +1 para match, -1 para mismatch).\n",
+    "  - Penalidade para gaps, se necessário.\n",
+    "\n",
+    "### 5. **Filtragem e Classificação**:\n",
+    "- **Descrição**: Ordenar os alinhamentos pelo número de matches ou pontuação, aplicando critérios adicionais (e.g., alinhamento mais curto em caso de empate).\n",
+    "- **Algoritmo**:\n",
+    "  - Filtrar alinhamentos com score abaixo de um limiar.\n",
+    "  - Ordenar pela pontuação, com desempate pelo comprimento.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Implementação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "from pprint import pprint\n",
     "\n",
-    "DEBUG = True\n",
     "def query_map(seq, window_size):\n",
     "    \"\"\"\n",
     "    Returns a dictionary of all key/value pairs where\n",
@@ -955,114 +1018,187 @@
     "    size = len(seq)\n",
     "\n",
     "    for position in range(size - window_size + 1):\n",
-    "        if DEBUG:\n",
-    "            print( position, seq[position : position + window_size])\n",
     "\n",
     "        subseq = seq[position : position + window_size]\n",
     "        res[subseq].append(position)\n",
-    "    if DEBUG:\n",
-    "        pprint(res)\n",
+    "\n",
+    "\n",
+    "\n",
     "    return res\n",
     "\n",
     "def get_all_positions(subseq, seq):\n",
     "    return [P for P in range(len(seq) - len(subseq) + 1) if seq[P : P + len(subseq)] == subseq]\n",
     "        \n",
-    "def hits(qm, seq):\n",
+    "def hits(query_map, seq):\n",
     "    \"\"\"\n",
-    "    for all keys Q in qm\n",
+    "        for all keys Q in qm\n",
     "        for all positions in seq where Q exists\n",
     "        add the tuple of corresponding positions\n",
     "    \"\"\"\n",
     "    res = []\n",
-    "    for Q, LstPos in qm.items():\n",
-    "        for P1 in LstPos:\n",
-    "            for P2 in get_all_positions(Q, seq):\n",
-    "                res.append((P1, P2))\n",
+    "    for subseq, query_positions in query_map.items():\n",
+    "        seq_positions = get_all_positions(subseq, seq)\n",
+    "        for query_pos in query_positions:\n",
+    "            for seq_pos in seq_positions:\n",
+    "                res.append((query_pos, seq_pos))\n",
+    "\n",
     "    return res\n",
     "\n",
-    "def extend_hit_direction(query, seq, hit, window_size):\n",
+    "\n",
+    "def extend_hit(query, seq, hit, window_size):\n",
     "    \"\"\"\n",
-    "        query: first string\n",
-    "        seq: second string\n",
-    "        hit: tuple of offsets\n",
-    "        window_size:\n",
-    "        direction: +1 or -1\n",
+    "    Extends a hit in both directions based on matching criteria.\n",
     "\n",
+    "    Args:\n",
+    "        query: The query sequence.\n",
+    "        seq: The sequence from the database.\n",
+    "        hit: Tuple of initial offsets in query and seq.\n",
+    "        window_size: Size of the initial hit window.\n",
     "\n",
-    "        try to extend in this direction one character at a time\n",
-    "        If both characters are the same, advance\n",
-    "        Otherwise continue if half the characters are the same\n",
-    "\n",
-    "\n",
-    "        returns a tuple with:\n",
-    "        - The initial position in query\n",
-    "        - The initial position in seq\n",
-    "        - The match size\n",
-    "        - The number of equal characters\n",
+    "    Returns:\n",
+    "        Tuple with (start_query, start_seq, length, num_matches).\n",
     "    \"\"\"\n",
-    "    pos_query, pos_seq = hit\n",
+    "    start_query, start_seq = hit\n",
     "\n",
-    "    def extend_hit(direction):\n",
-    "\n",
-    "        if direction == 1:\n",
-    "            query_extension = query[pos_query + window_size ::]\n",
-    "            seq_extension = seq[pos_seq+ window_size ::]\n",
-    "\n",
-    "        elif direction == -1:\n",
-    "\n",
-    "            query_extension = query[:pos_query:]\n",
-    "            query_extension = query_extension[::-1]\n",
-    "\n",
-    "            seq_extension = seq[:pos_seq:]\n",
-    "            seq_extension = seq_extension[::-1]\n",
-    "\n",
+    "    def extend_in_direction(query, seq, pos_query, pos_seq, direction):\n",
     "        match_size = 0\n",
-    "        equal_char = 0\n",
-    "        waiting_match = 0\n",
+    "        num_matches = 0\n",
+    "        mismatch_count = 0\n",
     "\n",
-    "        while query_extension and seq_extension:\n",
-    "\n",
-    "            if query_extension[0]==seq_extension[0]:\n",
-    "                match_size += 1 + waiting_match\n",
-    "                equal_char +=1\n",
-    "                waiting_match = 0\n",
-    "                \n",
+    "        while 0 <= pos_query < len(query) and 0 <= pos_seq < len(seq):\n",
+    "            if query[pos_query] == seq[pos_seq]:\n",
+    "                num_matches += 1\n",
+    "                mismatch_count = 0\n",
     "            else:\n",
-    "                waiting_match += 1\n",
+    "                mismatch_count += 1\n",
     "\n",
-    "            if DEBUG:\n",
-    "                print(f\"Possible extension(query/seq): {query_extension} {seq_extension}\\n\" \n",
-    "                        f\"Match size: {match_size} | Equal Bases: {equal_char} | Waiting match: {waiting_match} \\n\")\n",
-    "                \n",
-    "            query_extension = query_extension[1::]\n",
-    "            seq_extension = seq_extension[1::]\n",
-    "            \n",
-    "            if (match_size + waiting_match) // 2 > equal_char:\n",
+    "            match_size += 1\n",
+    "\n",
+    "            if mismatch_count > match_size // 2:\n",
     "                break\n",
-    "            \n",
-    "        if direction == 1:\n",
-    "            return [match_size, equal_char]\n",
-    "            \n",
-    "        else:\n",
-    "            return [pos_query - match_size, pos_seq - match_size, match_size, equal_char]\n",
-    "    \n",
-    "    res = extend_hit(-1)\n",
-    "    res[-2] += window_size + extend_hit(1)[-2]\n",
-    "    res[-1] += window_size + extend_hit(1)[-1]\n",
-    "    return res\n",
     "\n",
-    "    def best_hit(query, seq, window_size):\n",
-    "        pass\n",
+    "            pos_query += direction\n",
+    "            pos_seq += direction\n",
     "\n",
+    "        return match_size - mismatch_count, num_matches\n",
+    "\n",
+    "    # Extend left\n",
+    "    left_match_size, left_num_matches = extend_in_direction(query, seq, start_query - 1, start_seq - 1, -1)\n",
+    "    # Extend right\n",
+    "    right_match_size, right_num_matches = extend_in_direction(query, seq, start_query + window_size, start_seq + window_size, 1)\n",
+    "\n",
+    "    total_length = left_match_size + window_size + right_match_size\n",
+    "    total_matches = left_num_matches + window_size + right_num_matches\n",
+    "\n",
+    "    return (start_query - left_match_size, start_seq - left_match_size, total_length, total_matches)\n",
+    "\n",
+    "def best_hit(query, seq, window_size):\n",
+    "    \"\"\"\n",
+    "    Finds the best hit with the highest score. In case of a tie, the shorter hit appearing first is returned.\n",
+    "\n",
+    "    Args:\n",
+    "        query: The query sequence.\n",
+    "        seq: The sequence from the database.\n",
+    "        window_size: Size of the initial hit window.\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple with (start_query, start_seq, length, num_matches) for the best hit.\n",
+    "    \"\"\"\n",
+    "    qm = query_map(query, window_size)\n",
+    "    hit_list = hits(qm, seq)\n",
+    "\n",
+    "    best = None\n",
+    "    for hit in hit_list:\n",
+    "        extended_hit = extend_hit(query, seq, hit, window_size)\n",
+    "        if (best is None or \n",
+    "            extended_hit[3] > best[3] or \n",
+    "            (extended_hit[3] == best[3] and extended_hit[2] < best[2])):\n",
+    "            best = extended_hit\n",
+    "\n",
+    "    return best"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testes Unitários"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_best_hit (__main__.TestBLASTFunctions.test_best_hit) ... c:\\Users\\arafa\\miniconda3\\envs\\localhub\\Lib\\site-packages\\jupyter_client\\session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "  return datetime.utcnow().replace(tzinfo=utc)\n",
+      "ok\n",
+      "test_extend_hit (__main__.TestBLASTFunctions.test_extend_hit) ... ok\n",
+      "test_get_all_positions (__main__.TestBLASTFunctions.test_get_all_positions) ... ok\n",
+      "test_hits (__main__.TestBLASTFunctions.test_hits) ... ok\n",
+      "test_query_map (__main__.TestBLASTFunctions.test_query_map) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 5 tests in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestBLASTFunctions(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.query = \"AATATAT\"\n",
+    "        self.seq = \"AATATGTTATATAATAATATTT\"\n",
+    "        self.window_size = 3\n",
+    "\n",
+    "    def test_query_map(self):\n",
+    "        seq = self.query\n",
+    "        window_size = self.window_size\n",
+    "        expected = {\n",
+    "            'AAT': [0],\n",
+    "            'ATA': [1, 3],\n",
+    "            'TAT': [2, 4],\n",
+    "        }\n",
+    "\n",
+    "        result = query_map(seq, window_size)\n",
+    "        self.assertEqual(dict(result), expected, f\"query_map failed for input: {seq}, {window_size}\")\n",
+    "\n",
+    "    def test_get_all_positions(self):\n",
+    "        seq = \"ACGTACGT\"\n",
+    "        subseq = \"ACG\"\n",
+    "        expected = [0, 4]\n",
+    "        result = get_all_positions(subseq, seq)\n",
+    "        self.assertEqual(result, expected, f\"get_all_positions failed for input: {subseq}, {seq}\")\n",
+    "\n",
+    "    def test_hits(self):\n",
+    "        qm = query_map(self.query, self.window_size)\n",
+    "        expected = [(0, 0), (0, 12), (0, 15), (1, 1), (1, 8), (1, 10), (1, 13), \n",
+    "                    (1, 16), (3, 1), (3, 8), (3, 10), (3, 13), (3, 16), (2, 2), \n",
+    "                    (2, 7), (2, 9), (2, 17), (4, 2), (4, 7), (4, 9), (4, 17)]\n",
+    "        result = hits(qm, self.seq)\n",
+    "        self.assertEqual(sorted(result), sorted(expected), f\"hits failed for input: {qm}, {self.seq}\")\n",
+    "\n",
+    "    def test_extend_hit(self):\n",
+    "        hit = (1, 16)\n",
+    "        expected = (0, 15, 7, 6) \n",
+    "        result = extend_hit(self.query, self.seq, hit, self.window_size)\n",
+    "        self.assertEqual(result, expected, f\"extend_hit failed for input: {self.query}, {self.seq}, {hit}, {self.window_size}\")\n",
+    "\n",
+    "    def test_best_hit(self):\n",
+    "        expected = (0, 0, 7, 6)\n",
+    "        result = best_hit(self.query, self.seq, self.window_size)\n",
+    "        self.assertEqual(result, expected, f\"best_hit failed for input: {self.query}, {self.seq}, {self.window_size}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    query = \"AATATAT\"\n",
-    "    seq = \"AATATGTTATATAATAATATTT\"\n",
     "\n",
-    "    qm = query_map(query, 3)\n",
-    "    # print(qm)\n",
-    "    # print(hits(qm, seq))\n",
-    "    print(extend_hit_direction(query,seq,(0,0),3))"
+    "    unittest.main(argv=['first-arg-is-ignored'], exit=False, verbosity=2)\n"
    ]
   },
   {
@@ -1096,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,9 +1288,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A  0.75  0.08  0.08  0.08\n",
+      "C  0.08  0.25  0.25  0.42\n",
+      "G  0.08  0.08  0.08  0.42\n",
+      "T  0.08  0.58  0.58  0.08\n"
+     ]
+    }
+   ],
    "source": [
     "P = pwm(['ATTG', 'ATCG', 'ATTC', 'ACTC'], 0.5)\n",
     "print_profile(P)"
@@ -1170,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,9 +1367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCG\n"
+     ]
+    }
+   ],
    "source": [
     "mais_provavel = seq_mais_provavel(\"TACCGTGCA\", P)\n",
     "print(mais_provavel)"
@@ -1238,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,9 +1427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A  1.58 -1.58 -1.58 -1.58\n",
+      "C -1.58  0.00  0.00  0.74\n",
+      "G -1.58 -1.58 -1.58  0.74\n",
+      "T -1.58  1.22  1.22 -1.58\n"
+     ]
+    }
+   ],
    "source": [
     "PSSM = pssm(['ATTG', 'ATCG', 'ATTC', 'ACTC'], 0.5)\n",
     "print_profile(PSSM)"
@@ -1289,9 +1455,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".c:\\Users\\arafa\\miniconda3\\envs\\localhub\\Lib\\site-packages\\jupyter_client\\session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "  return datetime.utcnow().replace(tzinfo=utc)\n",
+      "........\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 9 tests in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "import unittest\n",
     "\n",
@@ -1532,7 +1712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "localhub",
    "language": "python",
    "name": "python3"
   },
@@ -1546,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
